@@ -1,3 +1,7 @@
+2012-03-29  Torbjorn Granlund  <tege@gmplib.org>
+
+	* mpn/sparc64/gcd_1.asm: New file.
+
 2012-03-27  Torbjorn Granlund  <tege@gmplib.org>
 
 	* config.guess: Fix typo in coreisbr recognition.
